--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                       <div class="collapse navbar-collapse" id="collapsibleNavbar">
                         <ul class="navbar-nav">
                           <li class="nav-item">
-                            <a class="nav-link" href="#">HOME</a>
+                            <a class="nav-link" href="#home">HOME</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">ABOUT</a>
+                            <a class="nav-link" href="#us">ABOUT</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">PAGES</a>
+                            <a class="nav-link" href="#feature">PAGES</a>
                           </li>  
                           <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Features</a>
@@ -47,7 +47,7 @@
         </div>
     </section>
 
-    <section class="banner">
+    <section class="banner" id="home">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6">
@@ -64,7 +64,7 @@
         </div>
     </section>
     <!-----------------about us---------------------------->
-    <section class="about">
+    <section class="about" id="us">
         <div class="container">
             <div class="row">
                 <h2 id="heading">About IT</h2>
@@ -88,8 +88,8 @@
             </div>
         </div>
     </section>
-    <!----------------------------------------------------->
-    <section class="feature">
+    <!-----------------------features------------------------------>
+    <section class="feature" id="feature">
         <div class="container-fluid">
             <div class="row">
                 <h2 id="heading">Features</h2>
@@ -104,7 +104,7 @@
         </div>
     </section>
     <!-------------------Opportunity----------------->
-    <section class="opportunity">
+    <section class="opportunity" id="opportunity">
         <div class="container">
             <div class="row">
                 <h2 id="heading"> Opportunities</h2>
@@ -162,9 +162,9 @@
                         <div class="card-body">
                             <h4 class="card-title">Menu</h4>
                             <ul>
-                                <li>Home</li>
-                                <li>About</li>
-                                <li>pages</li>
+                                <a href="#home"><li>Home</li></a>
+                                <a href="#us"><li>About</li></a>
+                                <a href="#feature"><li>Pages</li></a>
                             </ul>
                         </div>
                     </div>
